--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "@turf/turf",
-  "version": "0.0.0",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "prelint": "tsc",
-    "lint": "echo 'eslint will be moved to TSLint'",
-    "postlint": "documentation lint packages/turf-*/index.js",
-    "pretest": "lerna bootstrap --use-workspaces && npm run lint",
-    "test": "lerna run test --use-workspaces",
-    "docs": "node ./scripts/generate-readmes",
-    "postinstall": "opencollective postinstall"
-  },
-  "devDependencies": {
-    "@types/geojson": "*",
-    "@types/node": "*",
-    "camelcase": "*",
-    "d3-queue": "*",
-    "decamelize": "*",
-    "documentation": "*",
-    "eslint": "*",
-    "eslint-config-mourner": "*",
-    "fs-extra": "*",
-    "lerna": "2.8.0",
-    "load-json-file": "*",
-    "meow": "*",
-    "progress": "*",
-    "rollup": "*",
-    "rollup-plugin-typescript": "*",
-    "tape": "*",
-    "typescript": "*",
-    "yamljs": "*"
-  },
-  "dependencies": {
-    "opencollective": "^1.0.3"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/turf",
-    "logo": "https://opencollective.com/turf/logo.txt"
-  }
+    "name": "@turf/turf-muadzict",
+    "version": "0.0.0",
+    "private": true,
+    "workspaces": [
+        "packages/*"
+    ],
+    "scripts": {
+        "prelint": "tsc",
+        "lint": "echo 'eslint will be moved to TSLint'",
+        "postlint": "documentation lint packages/turf-*/index.js",
+        "pretest": "lerna bootstrap --use-workspaces && npm run lint",
+        "test": "lerna run test --use-workspaces",
+        "docs": "node ./scripts/generate-readmes",
+        "postinstall": "opencollective postinstall"
+    },
+    "devDependencies": {
+        "@types/geojson": "*",
+        "@types/node": "*",
+        "camelcase": "*",
+        "d3-queue": "*",
+        "decamelize": "*",
+        "documentation": "*",
+        "eslint": "*",
+        "eslint-config-mourner": "*",
+        "fs-extra": "*",
+        "lerna": "^3.20.1",
+        "load-json-file": "*",
+        "meow": "*",
+        "progress": "*",
+        "rollup": "*",
+        "rollup-plugin-typescript": "*",
+        "tape": "*",
+        "typescript": "*",
+        "yamljs": "*"
+    },
+    "dependencies": {
+        "@turf/helpers": "^6.1.4",
+        "opencollective": "^1.0.3"
+    },
+    "collective": {
+        "type": "opencollective",
+        "url": "https://opencollective.com/turf",
+        "logo": "https://opencollective.com/turf/logo.txt"
+    }
 }
